--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -52,11 +52,11 @@
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksUseGlobal)
             @Html.CheckBoxFor(m => m.LinksUseGlobal, new {
-           @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
- "document.getElementById('LinksUrl').disabled =  this.checked; " +
- "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': document.getElementById('LinksRegex').value = ''; " +
- "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': document.getElementById('LinksUrl').value = '';"
-       })
+                @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
+                           "document.getElementById('LinksUrl').disabled =  this.checked; " +
+                           "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': document.getElementById('LinksRegex').value = ''; " +
+                           "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': document.getElementById('LinksUrl').value = '';"
+            })
         </div>
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksRegex)
@@ -102,7 +102,7 @@
 
     <fieldset class="pure-control-group">
         <legend>
-            @Resources.ServiceAccount
+            @Html.LabelFor(m => m.ServiceAccounts)
         </legend>
         <table class="pure-table" id="service-account-table">
             <tr class="row">
@@ -117,7 +117,7 @@
     </div>
     <fieldset class="pure-control-group add-little-padding">
         <legend>
-            @Resources.Dependencies
+            @Html.LabelFor(m => m.Dependencies)
         </legend>
             <table class="pure-table" id="dependencies-table">
                 <tr>
