--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -101,10 +101,7 @@
             }
         </div>
         <div class="sidebar-bordergrid">
-
-            <label>
-                @Resources.ServiceAccount
-            </label>
+            @Html.LabelFor(m => m.ServiceAccounts)
             @if (@Model.ServiceAccounts.Count > 0)
             {
                 foreach (Bonobo.Git.Server.Data.ServiceAccount serviceAccount in Model.ServiceAccounts)
@@ -144,9 +141,7 @@
         </div>
 
         <div class="sidebar-bordergrid bottom">
-            <label>
-                @Resources.Dependencies
-            </label>
+            @Html.LabelFor(m => m.Dependencies)
             <div>
                 @foreach (Bonobo.Git.Server.Data.Dependency dependency in Model.Dependencies)
                 {
@@ -154,14 +149,14 @@
                         <summary>
                             <div class="sidebar-text">
                                 @{
-                                    string VersionInUseFormat2 = "";
+                                    string versionInUseMajorMinorFormat = "";
                                     if (dependency.VersionInUse != null)
                                     {
-                                        string[] VersionInUseFormat = dependency.VersionInUse.Split('.');
-                                        VersionInUseFormat2 = (VersionInUseFormat.Length == 1 ? VersionInUseFormat[(0)] : $"({VersionInUseFormat[0]}.{VersionInUseFormat[1]})");
+                                        string[] versionInUseParts = dependency.VersionInUse.Split('.');
+                                        versionInUseMajorMinorFormat = (versionInUseParts.Length == 1 ? versionInUseParts[(0)] : $"({versionInUseParts[0]}.{versionInUseParts[1]})");
                                     }
                                 }
-                                <i class="fa fa-chevron-down"></i><label for="@dependency.Id" type="text" class="removeVisualInput dependency-label " readonly> @dependency.KnownDependency.ComponentName</label><input class="removeVisualInput overflow-ellipsis" value="@VersionInUseFormat2" readonly="">
+                                <i class="fa fa-chevron-down"></i><label for="@dependency.Id" type="text" class="removeVisualInput dependency-label " readonly> @dependency.KnownDependency.ComponentName</label><input class="removeVisualInput overflow-ellipsis" value="@versionInUseMajorMinorFormat" readonly="readonly">
                                 <input type="text" id="@dependency.Id" value="@dependency.KnownDependency.ComponentName" hidden>
                             </div>
                         </summary>
@@ -177,9 +172,9 @@
                                         }
                                         else
                                         {
-                                            <input class="removeVisualInput" value="@Resources.Unknown" readonly/>
+                                            <input class="removeVisualInput" value="@Resources.Unknown" readonly />
                                         }
-                                     }
+                                    }
                                 </div>
                             </div>
                         </div>
