--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -22,7 +22,7 @@ else
                     <details style="display:inline-block;">
                         <summary><i class="fa fa-chevron-down"></i>@Resources.Repository_Layout_Code</summary>
                         <div style="position:absolute;">
-                            @*To get dropdown box as Relative to Fixed postition*@
+                            @*To get dropdown box as Relative to Fixed position*@
                             <div class="dropdownBox">
                                 <div>
                                     @*Git URL + Copy Button*@
