--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -21,6 +21,8 @@ th a:hover { text-decoration: none; color: #4183c4; }
 .pure-table thead { background: none; }
 .pure-table th { font-weight: 300; }
 
+select option:disabled { background-color: #777777; color: #FFFFFF; }
+
 pre code { font-family: Consolas, monospace; }
 
 .field-validation-error { color: #a94442; margin-left: 0.7em; }
