--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -90,7 +90,7 @@ div.pure-control-group.checkboxlist>span { display: inline-block; }
     padding-top: 10px;
 }
 label.removeVisualInput.dependency-label {
-    margin:0;
+    margin: 0;
     color: black;
     display: inline-block;
     font-size: 100%;
@@ -98,6 +98,7 @@ label.removeVisualInput.dependency-label {
     font-weight: normal;
     max-width: 177px;
     overflow: clip;
+    vertical-align: middle;
 }
 
 .overflow-ellipsis{
